Swaggern done all endpoint Auth
